--- a/STM32-for-VSCode.config.yaml
+++ b/STM32-for-VSCode.config.yaml
@@ -46,6 +46,7 @@ cxxFlags: []
 assemblyFlags: []
 linkerFlags: 
   - -specs=nano.specs
+  - -u _printf_float
 
 
 # libraries to be included. The -l prefix to the library will be automatically added.
